2006-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/BeanImpl.java:
	(translate(String)): Don't assume the list uses "E",
	just use the first and only type variable.
	* java/lang/management/ManagementFactory.java:
	(getPlatformMBeanServer()): Register logging bean.
	* javax/management/openmbean/OpenType.java:
	(OpenType(String,String,String)): Actually use
	the string created to handle arrays.
	
2006-12-04  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(JCL_thread_interrupted): Use CallStaticBooleanMethod.

2006-12-04  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/java/nio/VMChannel.java (isThreadInterrupted):
	Make static.
	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(JCL_thread_interrupted): Only take JNIEnv.
	(vm_channel_class): New static variable.
	(initID): Set vm_channel_class.
	Wrap all reads() and writes() in do-while blocks that check
	interrupted status.

2006-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Server.java:
	Make map final and initialise it.
	(unregisterMBean(ObjectName)): Match against
	delegate's object name and not the instance.
	* java/lang/management/ManagementFactory.java:
	Added constant fields.
	(getPlatformMBeanServer()): Implemented.
	* javax/management/MBeanServerFactory.java: New file.
	
2006-12-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/BoxView.java
	(paint): Replaced painting algorithm with more simple and more
	reliable painting of the box.
	* javax/swing/text/html/BlockView.java
	(PositionInfo): New inner class. Stores additional CSS positioning
	information.
	(positionInfo): New field.
	(BlockView): Initialize positionInfo field.
	(fetchLayoutInfo): New helper method. Fetches additional
	CSS positioning information.
	(layoutMajorAxis): Perform additional CSS layout.
	(layoutMinorAxis): Perform additional CSS layout.
	(positionView): New helper method.