@@ -1,3 +1,9 @@
+2006-12-04  Roman Kennke  <kennke@aicas.com>
+
+	* java/awt/font/TextLayout.java
+	(hitTestChar): Fixed conditions for inclusion of range.
+	Use layout information in the run for more efficiency.
+
 2006-12-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/java/lang/management/BeanImpl.java:
